fix: back to top on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ hr {
     right: 50px;
     font-size: 25px;
     font-weight: bold;
+    z-index: 1;
 }
 
 #to-top:hover,
