--- a/css/mobile.css
+++ b/css/mobile.css
@@ -57,6 +57,16 @@
         min-height: 650px;
     }
 
+    #to-top {
+        padding: 5px 10px;
+        bottom: 10px;
+        right: 10px;
+        font-size: 15px;
+        background-color: #2d2f4b;
+        border: 1px solid #000;
+        border-radius: 10px;
+    }
+
     /****************/
     /* FILTER PAGES */
     /****************/
